# Homework

./: README.md
AMMesh-main/AMMesh-main/: CMakeLists.txt
AMMesh-main/AMMesh-main/src/hw4/: tutte_parameterizations.cpp
Games101-Homework-Win/Assignment0/: CMakeLists.txt  main.cpp
Games101-Homework-Win/Assignment1/: CMakeLists.txt  main.cpp  rasterizer.cpp
Games101-Homework-Win/Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Games101-Homework-Win/Assignment3/: CMakeLists.txt  OBJ_Loader.h  Texture.cpp  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Games101-Homework-Win/Assignment4/: CMakeLists.txt  main.cpp
Games101-Homework-Win/Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  binary.ppm
Games101-Homework-Win/Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  binary.ppm
cv-sp23-mps/MP1/q3/: dynamic_perspective_starter.py
cv-sp23-mps/MP1/q4/: render_image.py
cv-sp23-mps/MP2/contours/: contour_solution_template.md
cv-sp23-mps/MP3/Q3/: Q3_starter.ipynb
